tests/neg-macros/quoted-pattern-with-bounded-type-params.check
-- Error: tests/neg-macros/quoted-pattern-with-bounded-type-params.scala:11:50 -----------------------------------------
11 |    case '{ [A <: Int, B] => (x : A, y : A) => $b[A](x, y) : A } => ??? // error
   |                                                  ^
   |                       Implementation restriction: Type arguments to Open pattern are expected to have no bounds
